fluent-syntax/test/fixtures_behavior/entry_start_with_one_slash.ftl

/ Test
//~ ERROR E0003, pos 2, args "/"
